--- a/index.html
+++ b/index.html
@@ -4,41 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zenith Wellness - Mental Wellness Platform</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
   <!-- Header / Navigation -->
   <header class="header">
     <div class="header-inner">
-      <a href="#" class="logo">Zenith</a>
+      <span class="Cname">Zenith</span>
       <nav class="nav">
         <a href="index.html">Home</a>
         <a href="about.html">About us</a>
         <a href="therapists.html">Therapists</a>
         <a href="services.html">Service</a>
-        <a href="#">Contact us</a>
+        <a href="contact.html">Contact us</a>
         <a href="faqs.html">FAQs</a>
       </nav>
-      <a href="#" class="btn-login">Login</a>
+      <button class="btn-login">Login</button>
     </div>
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-illustrations">
-      <img src="assets/hero-meditation.png" alt="" class="hero-img hero-img-1">
-      <img src="assets/hero-hand-support.png" alt="" class="hero-img hero-img-2">
-      <img src="assets/hero-lotus.png" alt="" class="hero-img hero-img-3">
-      <img src="assets/hero-growth.png" alt="" class="hero-img hero-img-4">
-      <img src="assets/hero-heads.png" alt="" class="hero-img hero-img-5">
-      <img src="assets/hero-mirror.png" alt="" class="hero-img hero-img-6">
+      <img src="public/images/Gmaditstion.png" alt="Meditation illustration" class="hero-img hero-img-1">
+      <img src="public/images/solve.png" alt="Hand support illustration" class="hero-img hero-img-2">
+      <img src="public/images/meditation.png" alt="Lotus illustration" class="hero-img hero-img-3">
+      <img src="public/images/healing.png" alt="Growth illustration" class="hero-img hero-img-4">
+      <img src="public/images/understand.png" alt="Heads illustration" class="hero-img hero-img-5">
+      <img src="public/images/find.png" alt="Mirror illustration" class="hero-img hero-img-6">
     </div>
     <div class="hero-content">
       <h1>Zenith<br><span>Wellness for you</span></h1>
-      <button class="btn btn-signup-hero">Sign up</button>
+      <button class="btn-signup-hero">Sign up</button>
     </div>
   </section>
 
