--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <div class="inner-peace-inner">
       <div class="inner-peace-content">
         <h2>Find Your Inner Peace</h2>
-        <p>Zenith wellness is a holistic mental wellness platform designed to support your emotional and psychological well-being. We understand that life can be overwhelming, which is why we offer a comprehensive range of services including online therapy, guided meditation, and wellness resources to help you navigate challenges and cultivate a balanced, fulfilling life.</p>
+        <p>Zenith Wellness is a holistic mental wellness platform designed to support emotional balance, clarity, and self-care in every day life. Though online therapy sessions, guided meditation, and thoughtfully curated wellness resources, Zenith Wellness helps individuals manage stress, overcome burnout, and reconnect with themselves. Our approach blends modern mental health support with mindful practices, empowering you to nurture your mental and emotional well-being at your own pace.</p>
       </div>
       <div class="inner-peace-card">
-        <img src="assets/inner-peace-woman.png" alt="Woman relaxing with headphones" class="inner-peace-image">
+        <img src="public/images/rest.png" alt="Woman relaxing with headphones" class="inner-peace-image">
         <div class="inner-peace-card-overlay"></div>
         <h3>Professional mental wellness support for busy professionals and students</h3>
         <button class="btn btn-quiz">Take the Quiz</button>
@@ -76,12 +76,12 @@
       <div class="feature-card feature-card-peach">
         <h3>Wellness Toolkit</h3>
         <p>Practical exercises, mood trackers, and journaling resources to help you rebalance your emotional health and build resilience.</p>
-        <img src="assets/feature-toolkit.png" alt="" class="feature-icon-img">
+        <img src="./public/images/toolkit.png" alt="" class="feature-icon-img">
       </div>
       <div class="feature-card feature-card-events">
         <h3>Wellness Events</h3>
         <p>Join live virtual workshops and community sessions focused on holistic healing, mindfulness, and self-care techniques.</p>
-        <img src="assets/feature-events.png" alt="" class="feature-icon-img">
+        <img src="./public/images/event.png" alt="" class="feature-icon-img">
       </div>
     </div>
   </section>
@@ -106,23 +106,23 @@
       <div class="get-in-touch-info">
         <h2>Get In Touch</h2>
         <div class="social-icons">
-          <a href="#" class="social-icon" aria-label="Instagram">
+          <a href="./index.html" class="social-icon" aria-label="Instagram">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="2" width="20" height="20" rx="5"/><circle cx="12" cy="12" r="4"/><circle cx="18" cy="6" r="1.5"/></svg>
           </a>
-          <a href="#" class="social-icon" aria-label="LinkedIn">
+          <a href="./index.html" class="social-icon" aria-label="LinkedIn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="2" width="20" height="20" rx="2"/><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
           </a>
-          <a href="#" class="social-icon" aria-label="Email">
+          <a href="./index.html" class="social-icon" aria-label="Email">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
           </a>
         </div>
         <p class="copyright">© 2026 Zenith Wellness. All rights reserved.</p>
         <div class="legal-links">
-          <a href="#">Privacy</a>
+          <a href="./pages/contact.html">Privacy</a>
           <span>•</span>
-          <a href="#">Terms</a>
+          <a href="./pages/services.html">Terms</a>
           <span>•</span>
-          <a href="#">Sitemap</a>
+          <a href="./pages/about.html">Sitemap</a>
         </div>
       </div>
       <form class="contact-form">
